isucon10_qualify/cf-template-isucon10-qualify.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: >-
  AWS CloudFormation for ISUCON10 qualify

Parameters:
  KeyPairName:
    Description: "Amazon EC2 Key Pair"
    Type: AWS::EC2::KeyPair::KeyName
  # GitHubUsername:
  #   Description: "GitHub Username for SSH public key"
  #   Type: String

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: "192.168.0.0/16"
      EnableDnsSupport: "true"
      EnableDnsHostnames: "true"
      InstanceTenancy: default
  InternetGateway:
    Type: AWS::EC2::InternetGateway
  InternetGatewayAttachment:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC
  Subnet:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: "ap-northeast-1c"
      CidrBlock: "192.168.0.0/24"
      VpcId: !Ref VPC
      MapPublicIpOnLaunch: False
  RouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC
  Route:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref RouteTable
      DestinationCidrBlock: "0.0.0.0/0"
      GatewayId: !Ref InternetGateway
  SubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref Subnet
      RouteTableId: !Ref RouteTable
  SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref VPC
      GroupDescription: Security Group for ISUCON10 qualify
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: "22"
          ToPort: "22"
          CidrIp: "0.0.0.0/0"
        - IpProtocol: tcp
          FromPort: "443"
          ToPort: "443"
          CidrIp: "0.0.0.0/0"
        - IpProtocol: -1
          CidrIp: "192.168.0.0/24"

  Instance1:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-03bbe60df80bdccc0
      InstanceType: c7a.medium
      SecurityGroupIds:
        - !Ref SecurityGroup
      SubnetId: !Ref Subnet
      PrivateIpAddress: "192.168.0.11"
      KeyName: !Ref KeyPairName
      BlockDeviceMappings:
        - DeviceName: /dev/sda1
          Ebs:
            VolumeSize: 40
            VolumeType: gp3
      Tags:
        - Key: Name
          Value: isucon10-qualify-1
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          github_usernames=(
            "itohdak"
          )
          mkdir -p /home/isucon/.ssh
          for github_username in "${!github_usernames[@]}"; do
            curl -s https://github.com/$github_username.keys >> /home/isucon/.ssh/authorized_keys
          done
          chown -R isucon:isucon /home/isucon/.ssh
          chmod 600 /home/isucon/.ssh/authorized_keys
          
          # for python installation
          sudo killall apt apt-get
          sudo rm /var/lib/apt/lists/lock
          sudo rm /var/cache/apt/archives/lock
          sudo rm /var/lib/dpkg/lock*
          sudo dpkg --configure -a
          sudo apt update
          sudo apt upgrade -y
          sudo add-apt-repository ppa:deadsnakes/ppa -y
          sudo apt update
          sudo apt install -y python3-pip
  InstanceIP1:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      InstanceId: !Ref Instance1
  Instance2:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-03bbe60df80bdccc0
      InstanceType: c7a.medium
      SecurityGroupIds:
        - !Ref SecurityGroup
      SubnetId: !Ref Subnet
      PrivateIpAddress: "192.168.0.12"
      KeyName: !Ref KeyPairName
      BlockDeviceMappings:
        - DeviceName: /dev/sda1
          Ebs:
            VolumeSize: 40
            VolumeType: gp3
      Tags:
        - Key: Name
          Value: isucon10-qualify-2
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          github_usernames=(
            "itohdak"
          )
          mkdir -p /home/isucon/.ssh
          for github_username in "${!github_usernames[@]}"; do
            curl -s https://github.com/$github_username.keys >> /home/isucon/.ssh/authorized_keys
          done
          chown -R isucon:isucon /home/isucon/.ssh
          chmod 600 /home/isucon/.ssh/authorized_keys
  InstanceIP2:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      InstanceId: !Ref Instance2
  # Instance3:
  #   Type: AWS::EC2::Instance
  #   Properties:
  #     ImageId: ami-03bbe60df80bdccc0
  #     InstanceType: c7a.medium
  #     SecurityGroupIds:
  #       - !Ref SecurityGroup
  #     SubnetId: !Ref Subnet
  #     PrivateIpAddress: "192.168.0.13"
  #     KeyName: !Ref KeyPairName
  #     BlockDeviceMappings:
  #       - DeviceName: /dev/sda1
  #         Ebs:
  #           VolumeSize: 40
  #           VolumeType: gp3
  #     Tags:
  #       - Key: Name
  #         Value: isucon10-qualify-3
  #     UserData:
  #       Fn::Base64: !Sub |
  #         #!/bin/bash
  #         github_usernames=(
  #           "itohdak"
  #         )
  #         mkdir -p /home/isucon/.ssh
  #         for github_username in "${!github_usernames[@]}"; do
  #           curl -s https://github.com/$github_username.keys >> /home/isucon/.ssh/authorized_keys
  #         done
  #         chown -R isucon:isucon /home/isucon/.ssh
  #         chmod 600 /home/isucon/.ssh/authorized_keys
  # InstanceIP3:
  #   Type: AWS::EC2::EIP
  #   Properties:
  #     Domain: vpc
  #     InstanceId: !Ref Instance3
